# cog-vs-zarr

./: .gitignore  Dockerfile  LICENSE  README.md  cog_vs_zarr.ipynb  compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
notebooks/: cog_vs_zarr.ipynb  virtual_zarr_store.ipynb
