[project]
name = "not-a-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "icechunk>=1.1.5",
    "jupyterlab>=4.4.2",
    "numcodecs>=0.16.2",
    "numpy>=2.2.5",
    "rio-cogeo>=5.4.1",
    "rioxarray>=0.19.0",
    "tifffile>=2025.5.10",
    "virtualizarr>=2.1.2",
    "xarray>=2025.4.0",
    "zarr>=3.1.0",
]
